--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <p class="p1"><span class="s1"><b>Privacy Policy</b></span></p>
-<p class="p2"><span class="s1">built the MoodShaper app as a Free app. This SERVICE is provided by at no cost and is intended for use as is.</span></p>
+<p class="p2"><span class="s1">Ausianovich Kanstantsin built the MoodShaper app as a Free app. This SERVICE is provided by Ausianovich Kanstantsin at no cost and is intended for use as is.</span></p>
 <p class="p2"><span class="s1">This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</span></p>
 <p class="p2"><span class="s1">If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</span></p>
 <p class="p2"><span class="s1">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at MoodShaper unless otherwise defined in this Privacy Policy.</span></p>
